kubernetes/apps/order-processor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-processor
  namespace: apps
spec:
  selector:
    app: order-processor
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
